mType/tests/testFiles/typeChecking/error/functionReturnTypeMismatchIntToString.mt
function getInt(): int {
    return 42;
}

string wrongString = getInt();  // Should fail